        Reviewed by Justin Garcia.

Minor refactoring and cleanup to Selection code
        https://bugs.webkit.org/show_bug.cgi?id=23774

        No functional changes, thus no tests.

        * editing/Editor.cpp:
        (WebCore::Editor::applyStyle):
        (WebCore::Editor::applyParagraphStyle):
        * editing/Selection.cpp:
        (WebCore::Selection::Selection):
        (WebCore::Selection::setBaseAndExtentToDeepEquivalents):
        (WebCore::Selection::setStartAndEndFromBaseAndExtentRespectingGranularity):
        (WebCore::Selection::updateSelectionType):
        (WebCore::Selection::validate):
        (WebCore::Selection::setWithoutValidation):
        (WebCore::Selection::adjustSelectionToAvoidCrossingEditingBoundaries):
        * editing/Selection.h:
        (WebCore::Selection::):
        (WebCore::Selection::selectionType):
        (WebCore::Selection::extent):
        (WebCore::Selection::isNone):
        (WebCore::Selection::isCaret):
        (WebCore::Selection::isRange):
        (WebCore::Selection::isCaretOrRange):
        * editing/SelectionController.h:
        (WebCore::SelectionController::selectionType):
        * editing/TypingCommand.cpp:
        (WebCore::TypingCommand::deleteKeyPressed):
        (WebCore::TypingCommand::forwardDeleteKeyPressed):
        * page/Frame.cpp:
        (WebCore::Frame::revealSelection):

Canonical link: https://commits.webkit.org/32877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40738 268f45cc-cd09-0410-ab3c-d52691b4dbfc