WebCore/editing/TypingCommand.cpp
@@ -373,12 +373,12 @@ void TypingCommand::deleteKeyPressed(TextGranularity granularity, bool killRing)
     Selection selectionToDelete;
     Selection selectionAfterUndo;
     
-    switch (endingSelection().state()) {
-        case Selection::RANGE:
+    switch (endingSelection().selectionType()) {
+        case Selection::RangeSelection:
             selectionToDelete = endingSelection();
             selectionAfterUndo = selectionToDelete;
             break;
-        case Selection::CARET: {
+        case Selection::CaretSelection: {
             if (breakOutOfEmptyMailBlockquotedParagraph()) {
                 typingAddedToOpenCommand();
                 return;
@@ -431,7 +431,7 @@ void TypingCommand::deleteKeyPressed(TextGranularity granularity, bool killRing)
                 selectionAfterUndo.setWithoutValidation(startingSelection().end(), selectionToDelete.extent());
             break;
         }
-        case Selection::NONE:
+        case Selection::NoSelection:
             ASSERT_NOT_REACHED();
             break;
     }
@@ -455,12 +455,12 @@ void TypingCommand::forwardDeleteKeyPressed(TextGranularity granularity, bool ki
     Selection selectionToDelete;
     Selection selectionAfterUndo;
 
-    switch (endingSelection().state()) {
-        case Selection::RANGE:
+    switch (endingSelection().selectionType()) {
+        case Selection::RangeSelection:
             selectionToDelete = endingSelection();
             selectionAfterUndo = selectionToDelete;
             break;
-        case Selection::CARET: {
+        case Selection::CaretSelection: {
             m_smartDelete = false;
 
             // Handle delete at beginning-of-block case.
@@ -509,7 +509,7 @@ void TypingCommand::forwardDeleteKeyPressed(TextGranularity granularity, bool ki
             }
             break;
         }
-        case Selection::NONE:
+        case Selection::NoSelection:
             ASSERT_NOT_REACHED();
             break;
     }
